<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sign_up_margin"
        android:orientation="vertical"
        tools:context=".AddFoodItemActivity">

        <TextView
            android:id="@+id/add_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/dp3_dimen"
            android:layout_marginBottom="@dimen/dp5_dimen"
            android:textColor="@color/p_light"
            android:text="@string/add_food_item"
            android:textSize="@dimen/sp30_text"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/food"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            app:srcCompat="@drawable/ic_food"
            android:contentDescription="@string/fresh_share" />

        <EditText
            android:id="@+id/foodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/sign_up_padding"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/name_of_food"
            android:inputType="textPersonName"
            android:autofillHints="@string/name_of_food" />

        <EditText
            android:id="@+id/foodDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/sign_up_padding"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/food_description"
            android:inputType="textPersonName"
            android:autofillHints="@string/food_description" />


        <EditText

            android:id="@+id/imageURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/sign_up_padding"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textUri"
            android:autofillHints="@string/password" />


        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/sign_up_padding"
            android:layout_gravity="center"
            android:onClick="addItem"
            android:backgroundTint="@color/p_light"
            android:text="Save" />


    </LinearLayout>
</ScrollView>