<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sign_up_margin"
        android:orientation="vertical"
        tools:context=".SignUpActivity">

        <TextView
            android:id="@+id/new_vendor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/dp3_dimen"
            android:layout_marginBottom="@dimen/dp5_dimen"
            android:textColor="@color/p_light"
            android:text="@string/new_vendor_text"
            android:textSize="@dimen/dp20_plate_image"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/freshShare"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            app:srcCompat="@drawable/freshshare"
            android:contentDescription="@string/fresh_share" />

        <EditText
            android:id="@+id/vendor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/sign_up_padding"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/vendor_name"
            android:inputType="textPersonName"
            android:autofillHints="@string/vendor_name" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/sign_up_padding"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/email_address" />

        <EditText
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/sign_up_padding"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:autofillHints="@string/address" />

        <EditText
            android:id="@+id/imageURl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/sign_up_padding"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textUri"
            android:autofillHints="@string/password" />


        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/sign_up_padding"
            android:layout_gravity="center"
            android:onClick="SignUp"
            android:backgroundTint="@color/p_light"
            android:text="@string/sign_up" />


    </LinearLayout>
</ScrollView>