<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">

...
            android:layout_height="@dimen/desc_card_image_height"
            android:scaleType="centerCrop"
            android:layout_below="@id/toolbar"
            android:padding="@dimen/padding_desc_food"/>

        <TextView
            android:id="@+id/foodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/foodImage"
            android:text="@string/steak_fajita_plate"
            android:textSize="@dimen/sp30_text"
            android:textColor="@color/s_text_dark"
...
