...
    <string name="lorem_ipsum">Nulla odio orci, finibus eget tincidunt ac, suscipit vel leo. Nulla ipsum lectus, auctor eget pellentesque consectetur, vulputate id felis. Suspendisse ac neque nec nisi imperdiet sagittis iaculis in enim. Aliquam eu sodales ante. Nulla lacinia scelerisque imperdiet. Suspendisse efficitur consectetur mattis. Suspendisse ultricies risus eget turpis feugiat malesuada.<
    <string name="vendor_info">Vendor Info</string>
    <string name="vendor_email">Vendor Email</string>
    <string name="vendor_address">Vendor Address</string>
    <string name="vendor_food_type">Vendor Food Type</string>
    <string name="vendor_profile_pic">Vendor Profile Pic</string>
    <string name="home">Home</string>
    <string name="product_title">Food Item</string>
    <string name="about">about</string>
    <string name="food_frag_title">Recently Added Foods Available</string>
    <string name="new_vendor_text">New Vendor? Sign Up Below!</string>
    <string name="existing_vendors_text">Participating Vendors</string>
    <string name="welcome_text">Welcome to Fresh Share!</string>
    <string name="update_info_text">Update Your Information</string>
    <string name="pickup_time_reminder">Please select a pickup time reminder:</string>
    <string name="set_reminder">Set Reminder!</string>
    <string name="your_reminder_time_is">"Your reminder time is: "</string>
    <string name="time_selected" />
    <string name="please_select_distance">Please select maximum search distance:</string>
...
