<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/match_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/product_card_image_height"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/food_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_title"
                android:textColor="@color/black"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/food_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                 />

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>